{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 72,
  "lineage": "23ca2b9e-ca24-12ef-f78f-a3cff5e5ad13",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:107824223202:network-acl/acl-08307f93a091de3dc",
            "default_network_acl_id": "acl-08307f93a091de3dc",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-08307f93a091de3dc",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "107824223202",
            "subnet_ids": [
              "subnet-0986ead2902d27802",
              "subnet-0aaf823a2f62c9075",
              "subnet-0cbd91a616ec24884",
              "subnet-0eaabb6a30573d4b2"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "Vpc-module-default",
              "Team": "Devops",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Vpc-module-default",
              "Team": "Devops",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07343cb655c1126ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:107824223202:route-table/rtb-0ed57ebdf25551a4c",
            "default_route_table_id": "rtb-0ed57ebdf25551a4c",
            "id": "rtb-0ed57ebdf25551a4c",
            "owner_id": "107824223202",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "Vpc-module-default",
              "Team": "Devops",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Vpc-module-default",
              "Team": "Devops",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-07343cb655c1126ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:107824223202:security-group/sg-0fc784969f5ccf6bb",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0fc784969f5ccf6bb",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "107824223202",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "Vpc-module-default",
              "Team": "Devops",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Vpc-module-default",
              "Team": "Devops",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07343cb655c1126ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02801a5bb3aac7454",
            "domain": "vpc",
            "id": "eipalloc-02801a5bb3aac7454",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-23-22-140-207.compute-1.amazonaws.com",
            "public_ip": "23.22.140.207",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "Vpc-module-us-east-1a",
              "Team": "Devops",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Vpc-module-us-east-1a",
              "Team": "Devops",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f5f7fa7cb0c69f1a",
            "domain": "vpc",
            "id": "eipalloc-0f5f7fa7cb0c69f1a",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-0-131-12.compute-1.amazonaws.com",
            "public_ip": "52.0.131.12",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "Vpc-module-us-east-1b",
              "Team": "Devops",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Vpc-module-us-east-1b",
              "Team": "Devops",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:107824223202:internet-gateway/igw-01a30670cf0bd24dd",
            "id": "igw-01a30670cf0bd24dd",
            "owner_id": "107824223202",
            "tags": {
              "Environment": "dev",
              "Name": "Vpc-module",
              "Team": "Devops",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Vpc-module",
              "Team": "Devops",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07343cb655c1126ac"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02801a5bb3aac7454",
            "association_id": "eipassoc-03f18a1497d03e6ab",
            "connectivity_type": "public",
            "id": "nat-0962aaa2a9e9be412",
            "network_interface_id": "eni-088ce3c457e07ca56",
            "private_ip": "10.0.101.120",
            "public_ip": "23.22.140.207",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0cbd91a616ec24884",
            "tags": {
              "Environment": "dev",
              "Name": "Vpc-module-us-east-1a",
              "Team": "Devops",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Vpc-module-us-east-1a",
              "Team": "Devops",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f5f7fa7cb0c69f1a",
            "association_id": "eipassoc-0cae49c8f06754d07",
            "connectivity_type": "public",
            "id": "nat-0e709bf8ba3c76818",
            "network_interface_id": "eni-0ec15099f75ea930d",
            "private_ip": "10.0.102.196",
            "public_ip": "52.0.131.12",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0eaabb6a30573d4b2",
            "tags": {
              "Environment": "dev",
              "Name": "Vpc-module-us-east-1b",
              "Team": "Devops",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Vpc-module-us-east-1b",
              "Team": "Devops",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-049b335416334d62c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0962aaa2a9e9be412",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-049b335416334d62c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0bfa58298a4561c601080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e709bf8ba3c76818",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bfa58298a4561c60",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01a30670cf0bd24dd",
            "id": "r-rtb-0ce7596cb08fba7ec1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ce7596cb08fba7ec",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:107824223202:route-table/rtb-049b335416334d62c",
            "id": "rtb-049b335416334d62c",
            "owner_id": "107824223202",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "Vpc-module-private-us-east-1a",
              "Team": "Devops",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Vpc-module-private-us-east-1a",
              "Team": "Devops",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-07343cb655c1126ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:107824223202:route-table/rtb-0bfa58298a4561c60",
            "id": "rtb-0bfa58298a4561c60",
            "owner_id": "107824223202",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "Vpc-module-private-us-east-1b",
              "Team": "Devops",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Vpc-module-private-us-east-1b",
              "Team": "Devops",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-07343cb655c1126ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:107824223202:route-table/rtb-0ce7596cb08fba7ec",
            "id": "rtb-0ce7596cb08fba7ec",
            "owner_id": "107824223202",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "Vpc-module-public",
              "Team": "Devops",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Vpc-module-public",
              "Team": "Devops",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-07343cb655c1126ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d2f94a6e70281b8",
            "route_table_id": "rtb-049b335416334d62c",
            "subnet_id": "subnet-0aaf823a2f62c9075"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-093ff51b0fdd9bea3",
            "route_table_id": "rtb-0bfa58298a4561c60",
            "subnet_id": "subnet-0986ead2902d27802"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f460354a52f1ae5",
            "route_table_id": "rtb-0ce7596cb08fba7ec",
            "subnet_id": "subnet-0cbd91a616ec24884"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-045284e3e22ecaa3f",
            "route_table_id": "rtb-0ce7596cb08fba7ec",
            "subnet_id": "subnet-0eaabb6a30573d4b2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:107824223202:subnet/subnet-0aaf823a2f62c9075",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aaf823a2f62c9075",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "107824223202",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "Vpc-module-private-us-east-1a",
              "Team": "Devops",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Vpc-module-private-us-east-1a",
              "Team": "Devops",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07343cb655c1126ac"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:107824223202:subnet/subnet-0986ead2902d27802",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0986ead2902d27802",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "107824223202",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "Vpc-module-private-us-east-1b",
              "Team": "Devops",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Vpc-module-private-us-east-1b",
              "Team": "Devops",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07343cb655c1126ac"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:107824223202:subnet/subnet-0cbd91a616ec24884",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cbd91a616ec24884",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "107824223202",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "Vpc-module-public-us-east-1a",
              "Team": "Devops",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Vpc-module-public-us-east-1a",
              "Team": "Devops",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07343cb655c1126ac"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:107824223202:subnet/subnet-0eaabb6a30573d4b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eaabb6a30573d4b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "107824223202",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "Vpc-module-public-us-east-1b",
              "Team": "Devops",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Vpc-module-public-us-east-1b",
              "Team": "Devops",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07343cb655c1126ac"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:107824223202:vpc/vpc-07343cb655c1126ac",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08307f93a091de3dc",
            "default_route_table_id": "rtb-0ed57ebdf25551a4c",
            "default_security_group_id": "sg-0fc784969f5ccf6bb",
            "dhcp_options_id": "dopt-0bee5ce07c696496b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07343cb655c1126ac",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ed57ebdf25551a4c",
            "owner_id": "107824223202",
            "tags": {
              "Environment": "dev",
              "Name": "Vpc-module",
              "Team": "Devops",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Vpc-module",
              "Team": "Devops",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}